--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -9,7 +9,7 @@
                 <div class="single-line" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
                     <b class="home" routerLink="/">Home</b>
                     <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Products</a></b>
-                    <mat-icon>keyboard_arrow_right</mat-icon> <b><a> {{blog.productName}}</a></b>
+                    <mat-icon>keyboard_arrow_right</mat-icon> <b><a> {{movie.productName}}</a></b>
                 </div>
             </div>
         </div>
@@ -21,17 +21,17 @@
                 </div>-->
                 <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
                     <div class="img-product" fxFlex="40%" fxLayout="row">
-                        <a href={{blog.productLink}} target="_blank">
-                            <img src={{blog.image}}></a>
+                        <a href={{movie.productLink}} target="_blank">
+                            <img src={{movie.image}}></a>
 
-                            <a href={{blog.productLink}} target="_blank">
-                                <img src={{blog.imageThree}}></a>
+                            <a href={{movie.productLink}} target="_blank">
+                                <img src={{movie.imageThree}}></a>
 
           
                     </div>
                     <div class="heading-product" fxFlex="60%">
                         <!-- <h1> {{blog.title}}</h1> -->
-                        <h5 class="namemoview">{{blog.productName}}</h5>
+                        <h5 class="namemoview">{{movie.productName}}</h5>
                         <p class="namemoviewdate">Renuka Vyavahare, TNN, Updated: Sep 10, 2021, 03.22 PM IST
                         </p>
                         <div class="review">
@@ -41,20 +41,20 @@
                             <mat-icon>star_half </mat-icon>
                             <mat-icon>star_border</mat-icon>
 
-                            <span>(3.5/5)</span>
+                            <span>({{movie.rating}}/5)</span>
                         </div>
-                        <p *ngFor="let paragraph of blog.paragraphs">
+                        <p *ngFor="let paragraph of movie.paragraphs">
                             {{paragraph.para}}
                         </p>
                         
-                        <p *ngFor="let paragraph of blog.paragraphTwo">
+                        <p *ngFor="let paragraph of movie.paragraphTwo">
                             {{paragraph.para}}
                         </p>
 
-                        <a href={{blog.productLink}} target="_blank">
-                            <img  src={{blog.imageTwo}}></a>
+                        <a href={{movie.productLink}} target="_blank">
+                            <img  src={{movie.imageTwo}}></a>
 
-                        <p *ngFor="let paragraph of blog.paragraphThree">
+                        <p *ngFor="let paragraph of movie.paragraphThree">
                             {{paragraph.para}}
                         </p>
 
