--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -8,7 +8,7 @@
             <div class="top-line">
                 <div class="single-line" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
                     <b class="home" routerLink="/">Home</b>
-                    <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Products</a></b>
+                    <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Movies</a></b>
                     <mat-icon>keyboard_arrow_right</mat-icon> <b><a> {{movie.productName}}</a></b>
                 </div>
             </div>
