--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -129,9 +129,10 @@
                         </div>
                         </div>
                         </div>
-                         <div class="vedios">
-                        
-<iframe  src="https://www.youtube.com/embed/-j7mGq3s3eA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                         <div class="vedios" [innerHtml]= "x">
+                         
+
+<!-- <iframe  src={{movie.youtube}} title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
   </div>
   </div>
                 </div>
