--- a/src/app/layout/blog-two/blog-two.component.scss
+++ b/src/app/layout/blog-two/blog-two.component.scss
@@ -1,5 +1,5 @@
 .category {
-    margin: auto;
+    margin: 1.5pc auto 0;
     min-height: 100vh;
 
 }
@@ -8,8 +8,8 @@
     padding: 15pc 0 0;
 
 }
-.top-line {
-   margin: 20px auto 0.5pc;
+.category-amazon_review {
+    margin: 0 auto;
 }
 .single-line .home{
     cursor: pointer;
@@ -19,6 +19,7 @@
 .single-line {
     display: flex;
     align-items: center;
+    padding:20px 0px 15px;
 }
 .single-line b {
     font-family: "Open Sans", sans-serif;
@@ -58,18 +59,32 @@
     color: #9c9797;
     padding: 0px 3px 0;
 }
+.nameAdd {
+
+    padding: 0 20px;
+}
 .review mat-icon.mat-icon {
     color: #ffb500;
     margin-bottom: 15px;
 }
+.reviewsrateUserProfile{
+    align-items: center;
+    padding: 0 0 10px 0;
+}
 .heading-productreview h1 {
-    font-family: 'Open Sans';
-    font-weight: 700;
+    font-family: "Open Sans";
+    font-weight: 600;
+    font-size: 15px;
+    padding: 0px 5px 0;
+    margin: 0;
+}
+.img {
+    float: left;
 }
 .review {
     display: flex;
     align-items: center;
-    /* place-content: center; */
+    place-content: end;
 }
 .review span {
     margin-bottom: 14px;
@@ -85,10 +100,49 @@
     letter-spacing: 0.2px;
 }
 .img-product img {
-    width: 100%;
+    width: 85%;
+    height: 250px;
+    object-fit: cover;
+    float: right;
 }
 .img-product {
-    margin: 10px 0 20px;
+    margin: 10px 0px 0px 0px;
+}
+.reviewsrate mat-icon {
+    background: #e3e2e2;
+    padding: 0px;
+    border-radius: 3px;
+    color: #7f7d7d;
+    border-radius: 30px;
+    width:25px;
+    height: 25px;
+    text-align: center;
+    font-size: 25px;
+    float: left;
+    margin: 0 5px;
+}
+.nameAdd mat-icon.mat-icon.notranslate {
+    background: transparent;
+    font-size: 25px;
+    width: auto;
+    margin: 0px 1px 0;
+}
+.nameAdd mat-icon.mat-icon.notranslate:hover{
+    color: #ffc41d;
+cursor: pointer;
+}
+.reviewsrate button {
+    /* float: left; */
+    margin: 10px auto;
+    display: flex;
+    place-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+    background: #ddd;
+    border: 0;
+    padding: 11px 2pc;
+    border-radius: 5px;
+    color: #8d8d8d;
 }
 .img-product {
     flex-wrap: wrap;
@@ -101,15 +155,7 @@
     width: 100%;
     margin: 5px;
 }
-section.home.amazonhome1 .heading-product h5 {
-    font-size: 24px;
-    padding: 1px 0 5px;
-    margin-bottom: 0;
-    line-height: 28px;
-}
-section.home.amazonhome1 .reviewalluser {
-    padding: 0.5pc;
-}
+
 .ft{
     margin: 0 auto;
 }
@@ -158,54 +204,14 @@ section.home.amazonhome1 .reviewalluser {
     color: #fcd68f;
     width: 19px;
 }
-section.home.amazonhome1 .single-line mat-icon {
-    font-size: 15px;
-    width: 15px;
-}
-section.home.amazonhome1 .single-line b {
-    font-size: 10px;
+
+.mid_Review_Part {
+    margin: 0 auto;
 }
 
-
-section.home.amazonhome1 .heading-product {
-    padding-left: 5px;
-}
-section.home.amazonhome1 .heading-product h1 {
-    font-size: 17px;
-    line-height: 27px;
-    padding: 0px 0pc 2pc;
-}
-section.home.amazonhome2 .heading-product h1 {
-    line-height: 27px;
-    padding: 0px 0pc 2pc;
-}
-section.home.amazonhome2 .heading-product h5 {
-    font-size: 24px;
-    padding: 1px 0 5px;
-    margin-bottom: 0;
-    line-height: 28px;
-}
-section.home.amazonhome2 .reviewalluser {
-    padding: 0.5pc;
-}
-section.home.amazonhome1 .start{
-    margin: 18px 10px 0;
-}
-section.home.amazonhome1  .vedios iframe {
-    width: 300px;
-    height: 360px;
-    float: right;
-    margin: 1pc 0;
-}
-
-section.home.amazonhome3  .vedios iframe {
-    width: 300px;
-    height: 360px;
-    float: right;
-    margin: 1pc 0;
-}
 .img img {
-    width: 20px;
+    width: 20px !important;
+    height:20px !important;
 }
 .img b {
     font-family: "Open Sans", sans-serif;
@@ -221,17 +227,28 @@ section.home.amazonhome3  .vedios iframe {
     position: relative;
     top: 3px;
 }
+.reviewsrateUser {
+    display: flex;
+    /* place-content: center; */
+    align-items: center;
+}
 .reviewd p {
-    font-size: 13px;
+    font-size: 12px;
     letter-spacing: 0.5px;
-    line-height: 18px;
+    line-height: 22px;
     font-family: "Cabin", sans-serif;
     color: #6e6e6e;
     padding-bottom: 1pc;
 }
+.reviewalluser .heading-productreview {
+    border: 1px solid #ddd;
+    box-shadow: 0px 0px 2px 2px #f5f4f4;
+    padding:1pc;
+    border-radius: 10px;
+}
 .start {
     border-bottom: 1px solid #effc82;
-    margin: 18px 10px;
+    margin: 45px 10px
 }
 .overrate h1 {
     font-weight: 500;
@@ -239,17 +256,16 @@ section.home.amazonhome3  .vedios iframe {
     margin: 0;
     letter-spacing: 0.5px;
     color: #aaaaaa;
-    padding: 1pc 6px 0px;
+    padding: 0pc 6px 0px;
 
 }
 .overrate {
-       padding: 0pc 1pc;
-    /* background: #1f2635; */
-    /* color: #fff; */
-    /* border-radius: 10px; */
-    width: 100%;
-    /* box-shadow: -2px 1px 7px 1px #ddd; */
-    text-align: right;
+    display: flex;
+    place-content: flex-end;
+    align-items: flex-end;
+}
+.overratedata {
+    padding: 0 10px;
 }
 .overrate .review {
     place-content: end;
@@ -260,10 +276,267 @@ section.home.amazonhome3  .vedios iframe {
 }
 .vedios {
     width: 100%;
+    margin: 0px auto 0pc;
+ 
 }
-.vedios iframe {
-    width: 400px;
-    height: 400px;
-    float: right;
-    margin: 1pc 0
+::ng-deep .vedios iframe {
+    width: 100%;
+    height: 450px;
+}
+.review.imgtwos img {
+    height: 200px;
+    object-fit: fill;
+}
+input.rightre{
+    padding: 6px;
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    height: 70px;
+}
+textarea{
+    width: 88%;
+    height: 70px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    margin: 5px auto;
+    color: #000;
+    padding: 15px 0;
+}
+::placeholder{
+    color: #000;
+}
+
+.headingMovie {
+    background: #000;
+    position: relative;
+    top: -5px;
+    color: #ddd;
+    padding: 1pc 1.5pc;
+}
+.overrateData p {
+    margin: 0;
+    letter-spacing: 0.9px;
+    font-family: "Open Sans", sans-serif;
+
+    font-weight: 100;
+    color: #cfcfcf;
+}
+.headingMovie h1.Mname {
+ 
+    letter-spacing: 0px;
+    font-weight: 800;
+    font-family: "Open Sans", sans-serif;
+    color: #ffffff;
+    font-size: 30px;
+    padding: 0px 0 15px;
+    margin-bottom: 0;
+}
+.headingMovieTwo h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 200;
+    font-size: 15px;
+    padding-right: 2pc;
+}
+
+section.home.amazonhome1 ::ng-deep .vedios iframe {
+    height: 240px;
+}
+section.home.amazonhome1 {
+
+    .headingMovieTwo h2 {
+        font-size: 12px;
+        padding-right: 11px;
+        line-height: normal;
+    }   
+    .headingMovie {
+        padding: 1pc 5px;
+}    
+ .heading-product h5 {
+    font-size: 24px;
+    padding: 1px 0 5px;
+    margin-bottom: 0;
+    line-height: 28px;
+}
+ .reviewalluser {
+    padding: 0.5pc;
+}
+.overrateData p {
+    margin: 0;
+    letter-spacing: 0.9px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 100;
+    color: #cfcfcf;
+    display: none;
+}
+ .single-line mat-icon {
+    font-size: 15px;
+    width: 15px;
+}
+ .single-line b {
+    font-size: 10px;
+}
+ .heading-product {
+    padding-left: 5px;
+}
+ .heading-product h1 {
+    font-size: 17px;
+    line-height: 27px;
+    padding: 0px 0pc 2pc;
+}
+.headingMovie h1.Mname {
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0px 0 5px;
+}
+
+.overratedata {
+    padding: 0 ;
+}
+.img-product {
+    flex-wrap: wrap;
+    place-content: start;
+    max-height: fit-content !important;
+    flex: none !important;
+
+}
+.review mat-icon.mat-icon {
+    width: 15px;
+    height: 15px;
+    font-size: 15px;
+}
+.img-product img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+.category{
+    margin: 0 auto 0;
+}
+.heading-product p {
+    text-align: justify;
+    padding: 0 7px;
+}
+.nameAdd {
+    padding: 0 0px 0 10px;
+}
+.nameAdd mat-icon.mat-icon.notranslate {
+    font-size: 20px;
+    margin: 0px 0px 0;
+}
+.reviewalluser .heading-productreview {
+    padding: 10px;
+    border-radius: 6px;
+}
+.start{
+    margin: 18px 4px 0;
+    text-align: justify;
+    word-break: break-word;
+}
+textarea{
+    width: 100%;
+}
+}
+section.home.amazonhome2 ::ng-deep .vedios iframe {
+    height: 300px;
+}
+section.home.amazonhome2 {
+
+    .headingMovieTwo h2 {
+        font-size: 12px;
+        padding-right: 11px;
+        line-height: normal;
+    }   
+    .headingMovie {
+        padding: 1pc 5px;
+}    
+ .heading-product h1 {
+    line-height: 27px;
+    padding: 0px 0pc 2pc;
+}
+ .heading-product h5 {
+    font-size: 24px;
+    padding: 1px 0 5px;
+    margin-bottom: 0;
+    line-height: 28px;
+}
+ .reviewalluser {
+    padding: 0.5pc;
+}
+
+.overrateData p {
+    margin: 0;
+    letter-spacing: 0.9px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 100;
+    color: #cfcfcf;
+    display: none;
+}
+
+.headingMovie h1.Mname {
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0px 0 5px;
+}
+
+.overratedata {
+    padding: 0 ;
+}
+.img-product {
+    flex-wrap: nowrap;
+    place-content: start;
+    max-height: fit-content !important;
+    flex: none !important;
+
+}
+.heading-product {
+    padding: 10px;
+}
+.review mat-icon.mat-icon {
+    width: 15px;
+    height: 15px;
+    font-size: 15px;
+}
+.img-product img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+.category{
+    margin: 0 auto 0;
+}
+.heading-product p {
+    text-align: justify;
+    padding: 0 7px;
+}
+.nameAdd {
+    padding: 0 0px 0 10px;
+}
+.nameAdd mat-icon.mat-icon.notranslate {
+    font-size: 20px;
+    margin: 0px 0px 0;
+}
+.reviewalluser .heading-productreview {
+    padding: 10px;
+    border-radius: 6px;
+}
+.start{
+    margin: 18px 4px 0;
+    text-align: justify;
+    word-break: break-word;
+}
+textarea{
+    width: 100%;
+}
+}
+
+section.home.amazonhome3 ::ng-deep .vedios iframe {
+    height: 360px;
+}
+section.home.amazonhome3 {
+.headingMovieTwo h2 {
+
+    font-size: 13px;
+    padding-right: 1pc;
+}
 }
