--- a/src/app/layout/all-blogs/all-blogs.component.html
+++ b/src/app/layout/all-blogs/all-blogs.component.html
@@ -3,134 +3,67 @@
         fxFlex.lg="1270px" fxFlex.xl="1910px">
         <div class="new-featured-amazon arrive blog">
             <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
-                <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                    <div class="blog-img1"></div>
-                    <div class="date" fxLayout="row">
-                        <h6><mat-icon>person</mat-icon>By Admin</h6>
-                        <h6><mat-icon>date_range</mat-icon>FEB 17,2020</h6>
-                    </div>
-                    <h1> Amazon Fashion Shopping <br /> &nbsp;</h1>
-                    <p> Upto 60% off - Top Brands - Jackets, Shirts, Dresses & formal wear, western wear,
-                        nightwear and lingerie.
-                        Get addition discounts on Slected cards.
-                        Buy now! Easy & Fast Delivery. No Cost EMI Available. Best Deals.</p>
-                    <a target="_blank"
-                        href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
-                        Read More <mat-icon>arrow_right_alt</mat-icon></a>
-                </div>
-
-                <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                    <div class="blog-img2"></div>
+                <div *ngFor="let blog of blogs" class="blog-featured" fxLayout="column" fxFlex="33%">
+                    <div class="blog-img1" [style.background]="'url(' + blog.image + ')'"></div>
                     <div class="date" fxLayout="row">
                         <h6>
-                            <mat-icon>person</mat-icon>By Admin
+                            <mat-icon>person</mat-icon>By {{blog.author}}
                         </h6>
                         <h6>
-                            <mat-icon>date_range</mat-icon>May 4,2019
+                            <mat-icon>date_range</mat-icon>FEB 17,2020
                         </h6>
                     </div>
-                    <h1>Sony WF-XB700 Truly Wireless Extra Bass Bluetooth Earbuds with 18 Hours Battery Life
-                    </h1>
-
-                    <p>Additional Bass: WF-XB700 includes EXTRA BASS for genuinely ground-breaking, punchy
-                        low-end
-                        sound. Your most loved basslines never sounded so great with 12mm driver unit
-
-                        Water Resistant: With an IPX4 water opposition rating,
-
-                    </p>
-                    <a target="blank" href="https://review.stackasian.com/blog/Sony-wf-xb700-Wireless-Extra-Bass">Read
-                        More
-                        <mat-icon>arrow_right_alt
-                        </mat-icon>
-                    </a>
-                </div>
-                <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                    <div class="blog-img3"></div>
-
-                    <div class="date" fxLayout="row">
-                        <h6>
-                            <mat-icon>person</mat-icon>By Admin
-                        </h6>
-                        <h6>
-                            <mat-icon>date_range</mat-icon>May 4,2019
-                        </h6>
+                    <div class="heading-product">
+                        <h1> {{blog.title}}</h1>
                     </div>
-                    <h1>The Review Stackasian Center Shooping News and weekly shooper</h1>
-                    <p> A Review Tool helps in finding the best item in the MarketPlace.</p>
-                    <a>Read More <mat-icon>arrow_right_alt
-                        </mat-icon></a>
-                </div>
+                    <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+
+                     
+                        <div class="heading-product" fxFlex="60%">
+                            <!-- <h1> {{blog.title}}</h1> -->
+                            <h5>{{blog.productName}}</h5>
+                            <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                                <div class="price">
+                                    <!-- <u> ₹{{product.originalPrice}} </u> -->
+                                    ₹ {{blog.price}}
+                                </div>
+                                <div class="star" fxLayout="row">
+                                    <div class="review">
+                                        <mat-icon>star</mat-icon>
+                                        <mat-icon>star</mat-icon>
+                                        <mat-icon>star</mat-icon>
+                                        <mat-icon>star</mat-icon>
+                                        <mat-icon>star</mat-icon>
+                                    </div>
+                                    <div class="viewer">
+                                        <b>( {{blog.reviews}} Reviews)</b>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="reviewviewicon">
+                                <div class="viewer">
+                                    <mat-icon>visibility</mat-icon>
+                                    <b>{{blog.views}} (Product View)</b>
+                                </div>
+                            </div>
+                            <p *ngFor="let paragraph of blog.paragraphs">
+                                {{paragraph.para}}
+                            </p>
 
 
 
-                <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                    <div class="blog-img1"></div>
-                    <div class="date" fxLayout="row">
-                        <h6><mat-icon>person</mat-icon>By Admin</h6>
-                        <h6><mat-icon>date_range</mat-icon>FEB 17,2020</h6>
+
+                        </div>
                     </div>
-                    <h1> Amazon Fashion Shopping <br /> &nbsp;</h1>
-                    <p> Upto 60% off - Top Brands - Jackets, Shirts, Dresses & formal wear, western wear,
-                        nightwear and lingerie.
-                        Get addition discounts on Slected cards.
-                        Buy now! Easy & Fast Delivery. No Cost EMI Available. Best Deals.</p>
-                    <a target="_blank"
-                        href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
-                        Read More <mat-icon>arrow_right_alt</mat-icon></a>
-                </div>
-                
-                <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                    <div class="blog-img2"></div>
-                    <div class="date" fxLayout="row">
-                        <h6>
-                            <mat-icon>person</mat-icon>By Admin
-                        </h6>
-                        <h6>
-                            <mat-icon>date_range</mat-icon>May 4,2019
-                        </h6>
+                    <div class="heading-product">
+                   
+                        <button class="buy">
+                            <a target="blank" href="{{blog.productLink}}">
+                                <mat-icon>play_arrow</mat-icon>Buy Now
+                            </a>
+                        </button>
                     </div>
-                    <h1>Sony WF-XB700 Truly Wireless Extra Bass Bluetooth Earbuds with 18 Hours Battery Life
-                    </h1>
-
-                    <p>Additional Bass: WF-XB700 includes EXTRA BASS for genuinely ground-breaking, punchy
-                        low-end
-                        sound. Your most loved basslines never sounded so great with 12mm driver unit
-
-                        Water Resistant: With an IPX4 water opposition rating,
-
-                    </p>
-                    <a target="blank" href="https://review.stackasian.com/blog/Sony-wf-xb700-Wireless-Extra-Bass">Read
-                        More
-                        <mat-icon>arrow_right_alt
-                        </mat-icon>
-                    </a>
                 </div>
-                <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                    <div class="blog-img3"></div>
-
-                    <div class="date" fxLayout="row">
-                        <h6>
-                            <mat-icon>person</mat-icon>By Admin
-                        </h6>
-                        <h6>
-                            <mat-icon>date_range</mat-icon>May 4,2019
-                        </h6>
-                    </div>
-                    <h1>The Review Stackasian Center Shooping News and weekly shooper</h1>
-                    <p> A Review Tool helps in finding the best item in the MarketPlace.</p>
-                    <a>Read More <mat-icon>arrow_right_alt
-                        </mat-icon></a>
-                </div>
-
-
-
-
-
-
-
-
-
             </div>
         </div>
     </div>
