--- a/src/app/layout/all-blogs/all-blogs.component.scss
+++ b/src/app/layout/all-blogs/all-blogs.component.scss
@@ -1,6 +1,28 @@
 .new.featured-amazon {
     margin: 2pc auto;
 }
+.category-amazon {
+    padding: 0 15px 10px;
+}
+.single-line mat-icon {
+    font-size: 15px;
+    height: auto;
+    width: 25px;
+    text-align: center;
+    color: #5e5e5e;
+    position: relative;
+    top: 4px;
+}
+.single-line b.home{
+    cursor: pointer;
+}
+.single-line b {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color: #5e5e5e;
+
+}
 .blog-featured h1 {
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
@@ -11,24 +33,72 @@
 }
 .blog-img1{
 background: url('https://footwearnews.com/wp-content/uploads/2018/02/online-shopping.jpg?w=700&h=437&crop=1');
-height: 300px;
-background-position: center;
-background-size: cover;
-width: 100%;
+height: 250px;
+background-position: center !important;
+    background-size: contain !important;
+    width: 100%;
+    margin: 0 auto;
+    background-repeat: no-repeat !important;
+    border: 0px solid #f7f7f7;
+    padding: 0pc;
+    border-radius: 5px;
 }
 .blog-img2{
     background: url('https://cdn.cnetcontent.com/syndication/mediaserverredirect/b1cc83a25da2e57e450fbea92886a9d0/original.jpg');
-    height: 300px;
-    background-position: center;
-    background-size: cover;
+    height: 250px;
+    background-position: center !important;
+    background-size: contain !important;
     width: 100%;
+    margin: 0 auto;
+    background-repeat: no-repeat !important;
+    border: 0px solid #f7f7f7;
+    padding: 0pc;
+    border-radius: 5px;
 }
 .blog-img3{
         background: url('https://etimg.etb2bimg.com/photo/66182971.cms');
-        height: 300px;
-        background-position: center;
-        background-size: cover;
+        height: 250px;
+        background-position: center !important;
+        background-size: contain !important;
         width: 100%;
+        margin: 0 auto;
+        background-repeat: no-repeat !important;
+        border: 0px solid #f7f7f7;
+        padding: 0pc;
+        border-radius: 5px;
+}
+.review mat-icon.mat-icon{
+    width: auto;
+    color: #ffc400;
+    font-size: 14px;
+    margin: 0px;
+    height: auto; 
+}
+.star {
+    padding: 0px 0 10px;
+    place-content: center;
+    align-items: center;
+}
+.viewer {
+    padding: 0 5px;
+}
+.review {
+    padding: 0 5px 0 0px;
+}
+.viewer b {
+    font-size: 11px;
+    font-family: inter;
+    letter-spacing: 0;
+    font-weight: 600;
+    font-family: "Open Sans", sans-serif;
+    color: #45d7eb;
+    padding: 0px 0px 0px 7px;
+    border-left: 2px solid #2dbfe9;
+}button.buy {
+    border: 0;
+    background: transparent;
+    display: flex;
+    align-items: center;
 }
 .date h6 {
     display: flex;
@@ -49,18 +119,21 @@ width: 100%;
 .blog-featured p {
     font-family: "Open Sans", sans-serif;
     font-size: 13px;
-    line-height: 22px;
     padding: 0px 10px;
     color: #6e6a6a;
-    height: 110px;
+    margin: 0 0 5px 0px;
+}
+.imghref{
+   padding: 0 !important;
+   color: #000 !important;
 }
 .blog-featured a {
     font-family: "Open Sans", sans-serif;
     display: flex;
     align-items: center;
-    padding: 0px 10px;
+    padding: 20px 10px 20px;
     font-size: 14px;
-    color:#3fe2f4;
+    color: #3fe2f4;
     font-weight: 600;
     text-decoration: none;
     cursor: pointer;
@@ -93,8 +166,19 @@ section.home.amazonhome3 .blog-featured p {
 }
 
 .blog-featured {
-    padding: 1pc 1pc 3pc;
+    padding:1pc 10px 1pc;
 }
 .blog-data {
     flex-wrap: wrap;
+}
+.reviewviewpara p:nth-child(1) {
+    display: block;
+}
+.reviewviewpara p {
+    display: none;
+}
+.blogPart {
+    box-shadow: 0px 0px 12px 3px #f7f7f7;
+    border-radius: 5px;
+    padding: 30px 10px 0;
 }
